Adjusted railgun damage

--- a/src-js/index.html
+++ b/src-js/index.html
@@ -32,7 +32,7 @@
 						<th>Score</th>
 					</table> -->
 					<h3>Weapons</h3>
-					<table id="weapon-table" class="table">
+					<table id="weapon-table" class="table table-condensed">
 					</table>
 				</div>
 				<div class="col-md-8">
