--- a/src-js/index.html
+++ b/src-js/index.html
@@ -34,6 +34,12 @@
 					<h3>Weapons</h3>
 					<table id="weapon-table" class="table table-condensed">
 					</table>
+		        	<h3>How to play</h3>
+		        	<p>Move: Arrow keys</p>
+		        	<p>Fire: Space</p>
+		        	<p>Select weapons: 1,2,3 </p>
+		        	<p>Note: enemies drop weapon ammo when they die</p>
+
 				</div>
 				<div class="col-md-8">
 					<canvas id="invaderCanvas" width=800 height=600> </canvas>	
@@ -55,6 +61,8 @@
 					<button id="nextLevelButton" class="btn btn-lg btn-primary"  >Next level</button>
 				</div>
 	        </div>
+
+
         </div>
 	</body>
 </html>
